Updated HW42, PT42, PT43.

--- a/Урок 41-48. ООП/Python - HW42.html
+++ b/Урок 41-48. ООП/Python - HW42.html
@@ -226,12 +226,16 @@
         </div>
         </p>
 
+        <p>Все игроки хранятся в <span class="hl-text">списке</span>. Игрок – это <span class="hl-text">экземпляр
+            класса "Игрок"</span>.</p>
+
         <p>Выбран <span class="hl-text">пункт 1</span>:
         <ul>
-          <li>В консоли <span class="hl-text">выводятся данные всех игроков</span> в виде:
+          <li>Программа <span class="hl-text">проходит по каждому игроку из списка</span> и <span
+              class="hl-text">выводит в консоль его строковое представление</span> в виде:
             <div class="console">
-              <pre><code>{никнейм} - {рейтинг}, {количество_побед}, {количество_поражений}, {соотношение_побед_к_поражениям}
-{никнейм} - {рейтинг}, {количество_побед}, {количество_поражений}, {соотношение_побед_к_поражениям}
+              <pre><code>{никнейм} {рейтинг} {количество_побед} {количество_поражений} {соотношение_побед_к_поражениям}
+{никнейм} {рейтинг} {количество_побед} {количество_поражений} {соотношение_побед_к_поражениям}
 ...</code></pre>
             </div>
           </li>
@@ -240,51 +244,57 @@
 
         <p>Выбран <span class="hl-text">пункт 2</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается никнейм</span>.</li>
-          <li>В консоли <span class="hl-text">показываются данные введённого игрока</span> в виде</span>:
+          <li>Программа <span class="hl-text">запрашивает с консоли никнейм</span>.</li>
+          <li>Если игрок с указанным никнеймом найден в списке, то <span class="hl-text">выводит в консоль его строковое
+              представление</span> в виде:
             <div class="console">
-              <pre><code>{никнейм} - {рейтинг}, {количество_побед}, {количество_поражений}, {соотношение_побед_к_поражениям}</code></pre>
+              <pre><code>{никнейм} {рейтинг} {количество_побед} {количество_поражений} {соотношение_побед_к_поражениям}</code></pre>
             </div>
+          </li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 3</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается никнейм</span>.</li>
-          <li>Если никнейм не занят, то программа <span class="hl-text">формирует объект "Игрок"</span>, у которого
-            <span class="hl-text">рейтинг</span>, <span class="hl-text">количество побед</span> и <span
-              class="hl-text">поражений</span> равны <code class="python"><b>0</b></code>, и <span
+          <li>Программа <span class="hl-text">запрашивает с консоли никнейм</span>.</li>
+          <li>Если игрок с указанным никнеймом не найден, то программа <span class="hl-text">формирует объект
+              "Игрок"</span>, у которого <span class="hl-text">рейтинг</span>, <span class="hl-text">количество
+              побед</span> и <span class="hl-text">поражений</span> равны <code class="python"><b>0</b></code>, и <span
               class="hl-text">помещает в список игроков</span>.
           </li>
-          <li>Если никнейм занят, то в консоли <span class="hl-text">выводится соответствующая информация</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 4</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается никнейм</span>.</li>
-          <li>Если никнейм найден, то программа <span class="hl-text">удаляет игрока из списка</span>.</li>
-          <li>Если никнейм не найден, то в консоли <span class="hl-text">выводится соответствующая информация</span>.
+          <li>Программа <span class="hl-text">запрашивает с консоли никнейм</span>.</li>
+          <li>Если игрок с указанным никнеймом найден, то программа <span class="hl-text">удаляет этого игрока из
+              списка</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 5</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается никнейм</span>.</li>
-          <li>Если никнейм найден, то программа <span class="hl-text">засчитывает победу найденному игроку</span>.</li>
-          <li>Если никнейм не найден, то в консоли <span class="hl-text">выводится соответствующая информация</span>.
+          <li>Программа <span class="hl-text">запрашивает с консоли никнейм</span>.</li>
+          <li>Если игрок с указанным никнеймом найден, то программа <span class="hl-text">засчитывает победу найденному
+              игроку</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 6</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается никнейм</span>.</li>
-          <li>Если никнейм найден, то программа <span class="hl-text">засчитывает поражение найденному игроку</span>.
-          </li>
-          <li>Если никнейм не найден, то в консоли <span class="hl-text">выводится соответствующая информация</span>.
+          <li>Программа <span class="hl-text">запрашивает с консоли никнейм</span>.</li>
+          <li>Если игрок с указанным никнеймом найден, то программа <span class="hl-text">засчитывает поражение
+              найденному игроку</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
         </p>
@@ -354,22 +364,25 @@
         </div>
         </p>
 
-        <p>Все аккаунты хранятся в <span class="hl-text">списке</span>. Аккаунт - это <span class="hl-text">объект
+        <p>Все аккаунты хранятся в <span class="hl-text">списке</span>. Аккаунт – это <span class="hl-text">экземпляр
             класса "Аккаунт"</span>.</p>
 
         <p>Выбран <span class="hl-text">пункт 1</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается логин</span> и <span class="hl-text">пароль</span>.</li>
-          <li>Если введённого логина среди других аккаунтов списка нет, то программа <span class="hl-text">создаёт
-              объект "Аккаунт"</span> и <span class="hl-text">добавляет в список</span>.</li>
-          <li>В противном случае в консоли <span class="hl-text">выводится соответствующая информация</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
+          </li>
+          <li>Если аккаунта с указанным логином нет в списке, то программа <span class="hl-text">создаёт объект
+              "Аккаунт"</span> и <span class="hl-text">добавляет в список</span>.</li>
+          <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
+          </li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 2</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается логин</span> и <span class="hl-text">пароль</span>.</li>
-          <li>Если логин и пароль совпадают с одним из аккаунтов, то программа <span class="hl-text">показывает меню
+          <li>Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
+          </li>
+          <li>Если найден аккаунт с указанными логином и паролем, то программа <span class="hl-text">показывает меню
               аккаунта</span>.</li>
         </ul>
         <div class="console">
@@ -385,7 +398,7 @@
 
         <p>Выбран <span class="hl-text">пункт 1</span>:
         <ul>
-          <li>Программа <span class="hl-text">вызывает строковое представление у объекта</span> и <span
+          <li>Программа <span class="hl-text">вызывает строковое представление у аккаунта</span> и <span
               class="hl-text">выводит в консоль следующее</span>:
             <div class="console">
               <pre><code>{логин} {имя} {фамилия} {баланс}</code></pre>
@@ -396,21 +409,21 @@
 
         <p>Выбран <span class="hl-text">пункт 2</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается фамилия</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли фамилию</span>.</li>
           <li>У текущего аккаунта <span class="hl-text">меняется фамилия</span>.</li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 3</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается имя</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли имя</span>.</li>
           <li>У текущего аккаунта <span class="hl-text">меняется имя</span>.</li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 4</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается число</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли сумму пополнения</span>.</li>
           <li>У текущего аккаунта <span class="hl-text">вызывается метод пополнения баланса</span>.</li>
           <li>В зависимости от результата работы метода, в консоли <span class="hl-text">выводится соответствующее
               сообщение</span>.</li>
@@ -419,9 +432,11 @@
 
         <p>Выбран <span class="hl-text">пункт 5</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается логин пользователя</span>.</li>
-          <li>Если пользователь найден и это не текущий аккаунт, то программа <span class="hl-text">запрашивает с
-              консоли число</span> и <span class="hl-text">вызывает у текущего аккаунта метод перевода</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает логин аккаунта</span>.</li>
+          <li>Если аккаунт найден в списке аккаунтов и это не текущий аккаунт, то программа <span
+              class="hl-text">запрашивает с консоли сумму перевода</span> и <span class="hl-text">вызывает у текущего
+              аккаунта метод перевода</span>.
+          </li>
           <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
@@ -473,14 +488,14 @@
         </div>
         </p>
 
-        <p>Все автомобили хранятся в <span class="hl-text">списке</span>. Автомобиль - это <span class="hl-text">объект
+        <p>Все автомобили хранятся в <span class="hl-text">списке</span>. Автомобиль – это <span class="hl-text">объект
             класса "Автомобиль"</span>.</p>
 
         <p>Выбран <span class="hl-text">пункт 1</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается идентификатор</span>.</li>
-          <li>Если автомобиль найден, то программа <span class="hl-text">выводит в консоль его строковое представление в
-              виде:</span>.
+          <li>Программа <span class="hl-text">запрашивает с консоли идентификатор</span>.</li>
+          <li>Если автомобиль с указанным идентификатором найден в списке, то программа <span class="hl-text">выводит в
+              консоль его строковое представление</span> в виде:
             <div class="console">
               <pre><code>{идентификатор} {марка} {модель} {цена}</code></pre>
             </div>
@@ -497,24 +512,34 @@
         </ul>
         </p>
 
+        <p>Выбран <span class="hl-text">пункт 2</span>:
+        <ul>
+          <li>Программа <span class="hl-text">проходит по каждому автомобилю из списка</span> и <span
+              class="hl-text">выводит в консоль его строковое представление</span> в виде:
+            <div class="console">
+              <pre><code>{идентификатор} {марка} {модель} {цена}
+{идентификатор} {марка} {модель} {цена}
+...</code></pre>
+            </div>
+          </li>
+        </ul>
+        </p>
+
         <p>Выбран <span class="hl-text">пункт 3</span>:
         <ul>
-          <li>Программа <span class="hl-text">проходится по списку автомобилей</span>.</li>
-          <li>Забирается <span class="hl-text">цена у автомобиля</span>.</li>
-          <li>Цена прибавляется к <span class="hl-text">общей стоимости</span>.</li>
-          <li>В консоль <span class="hl-text">выводится общая стоимость</span>.</li>
+          <li>Программа <span class="hl-text">проходит по списку автомобилей</span>.</li>
+          <li>Вычисляет <span class="hl-text">общую стоимость</span>.</li>
+          <li>В консоль <span class="hl-text">выводит общую стоимость</span>.</li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 4</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается идентификатор</span>, <span class="hl-text">марка</span>,
-            <span class="hl-text">модель</span> и <span class="hl-text">цена</span>.
+          <li>Программа <span class="hl-text">запрашивает с консоли идентификатор</span>, <span
+              class="hl-text">марку</span>, <span class="hl-text">модель</span> и <span class="hl-text">цену</span>.
           </li>
-          <li>Формируется <span class="hl-text">объект "Автомобиль"</span>.</li>
-          <li>Проходится по <span class="hl-text">каждому автомобилю из списка</span>.</li>
-          <li>Если введённый идентификатор не совпадает ни с одним идентификатором автомобиля из списка, то <span
-              class="hl-text">добавляет созданный объект в список в автомобилей</span>.</li>
+          <li>Если машина с указанным идентификатором не найдена в списке, то <span class="hl-text">добавляет её в
+              список</span>.</li>
           <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
@@ -522,10 +547,10 @@
 
         <p>Выбран <span class="hl-text">пункт 5</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается идентификатор</span>.</li>
-          <li>Проходится по <span class="hl-text">каждому автомобилю из списка</span>.</li>
-          <li>Если введённый идентификатор совпадает с идентификатором автомобиля из списка, то <span
-              class="hl-text">удаляет найденный автомобиль из списка</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли идентификатор</span>.</li>
+          <li>Если автомобиль с указанным идентификатором найден в списке, то <span class="hl-text">удаляет его из
+              списка</span>.
+          </li>
           <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
@@ -533,11 +558,9 @@
 
         <p>Выбран <span class="hl-text">пункт 6</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашивается идентификатор</span>.</li>
-          <li>Проходится по <span class="hl-text">каждому автомобилю из списка</span>.</li>
-          <li>Если введённый идентификатор совпадает с идентификатором автомобиля из списка, то <span
-              class="hl-text">делается копия найденного автомобиля</span> и <span class="hl-text">показывается меню
-              изменения (см. ниже)</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли идентификатор</span>.</li>
+          <li>Если автомобиль с указанным идентификатором найден в списке, то <span class="hl-text">делается копия
+              найденного автомобиля</span> и <span class="hl-text">показывается меню изменения (см. ниже)</span>.</li>
           <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
@@ -557,22 +580,20 @@
 
         <p>Выбран <span class="hl-text">пункт 1-4</span>:
         <ul>
-          <li>С консоли <span class="hl-text">запрашиваются соответствующие данные</span>.</li>
+          <li>Программа <span class="hl-text">запрашивает с консоли соответствующие данные</span>.</li>
           <li>Данные <span class="hl-text">выставляются в соответствующие поля копии автомобиля</span>.</li>
         </ul>
         </p>
 
         <p>Выбран <span class="hl-text">пункт 5</span>:
         <ul>
-          <li>Проходится по <span class="hl-text">каждому автомобилю из списка</span>.</li>
-          <li>Если идентификатор копии совпадает хотя бы с одним идентификатором из списка, то <span
-              class="hl-text">флажок опускается</span>.</li>
-          <li>После прохода если флажок поднят или же идентификатор копии совпадает с идентификатором оригинала, то
-            <span class="hl-text">первая проверка пройдена успешно</span>.
-          </li>
+          <li>Если автомобиль с идентификатором копии найден в списке, то <span class="hl-text">флажок
+              опускается</span>.</li>
+          <li>Если флажок поднят или же идентификатор копии совпадает с идентификатором оригинала, то <span
+              class="hl-text">первая проверка пройдена успешно</span>.</li>
           <li>Если цена у копии положительная, то <span class="hl-text">вторая проверка пройдена успешно</span>.</li>
           <li>Если обе проверки пройдены успешно, то <span class="hl-text">все поля оригинала заменяются на
-              соответствующие поля</span> и <span class="hl-text">возвращается предыдущее меню</span>.</li>
+              соответствующие поля копии</span> и <span class="hl-text">возвращается предыдущее меню</span>.</li>
           <li>В зависимости от результата, в консоли <span class="hl-text">выводится соответствующее сообщение</span>.
           </li>
         </ul>
