--- a/Урок 41-48. ООП/Python - PT46.html
+++ b/Урок 41-48. ООП/Python - PT46.html
@@ -4,7 +4,9 @@
   <title>Python - PT46</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -172,31 +174,59 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 46.1</h2>
-        <p>Создайте класс <span class="hl-text">"Книга"</span>. Этот класс должен <span class="hl-text">хранить поля для названия</span>, <span class="hl-text">автора</span>, <span class="hl-text">даты выхода</span> (одна строка) и <span class="hl-text">количества</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса реализуйте <span class="hl-text">магические методы</span> <code class="python"><b>__eq__()</b></code>, <code class="python"><b>__add__()</b></code> и <code class="python"><b>__sub__()</b></code>. Книги <span class="hl-text">равны</span>, если у них совпадают <span class="hl-text">название</span>, <span class="hl-text">автор</span> и <span class="hl-text">дата выхода</span>. Складывание книг <span class="hl-text">увеличивает количество исходной книги</span>.
+        <p>Создайте класс <span class="hl-text">"Устройство"</span>. Этот класс должен <span class="hl-text">хранить
+            поле для названия</span>.
+          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
+            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
+          <br>Для класса определите <span class="hl-text">метод "Использовать", который просто выводит в консоль
+            "Использование"</span>.
         </p>
-      </div>
-      <div class="right-rect">
-        <h2>Практическое Задание 46.2</h2>
+
+        <p>Создайте ещё <code class="python"><b>3</b></code> класса, которые наследуются от класса <span
+            class="hl-text">"Устройство"</span> - <span class="hl-text">"Кофемашина"</span>, <span
+            class="hl-text">"Тостер"</span> и <span class="hl-text">"Посудомойка"</span>.
+          <br>Переопределите для них <span class="hl-text">метод "Использовать" по своему усмотрению</span>.
+          <br>Переопределите для них <span class="hl-text">конструктор</span> и <span class="hl-text">строковое
+            представление</span>.
+        </p>
+
         <p>Реализуйте следующее меню:
         <div class="console">
-          <pre><code>1. Показать книги первой библиотеки
-2. Показать книги второй библиотеки
-3. Добавить книгу в первую библиотеку
-4. Передать книгу во вторую библиотеку</code></pre>
+          <pre><code>1. Выбрать кофемашину
+2. Выбрать тостер
+3. Выбрать посудомойка</code></pre>
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает название</span>, <span class="hl-text">автора</span>, <span class="hl-text">дату выхода</span> и <span class="hl-text">количество</span>, затем <span class="hl-text">добавляет в список</span>. Одинаковых книг в списке <span class="hl-text">быть не должно</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает название</span>, <span class="hl-text">автора</span>, <span class="hl-text">дату выхода</span> и <span class="hl-text">количество</span>, затем <span class="hl-text">добавляет во второй список, но отнимает из первого</span>.</p>
+        <p>При выборе <span class="hl-text">любого пункта</span>, программа <span class="hl-text">создаёт объект
+            выбранного класса</span> и <span class="hl-text">вызывает у него метод использования</span>.</p>
+      </div>
+      <div class="right-rect">
+        <h2>Практическое Задание 46.2</h2>
+        <p>Создайте класс <span class="hl-text">"Конвертер"</span>.
+          <br>Для класса определите <code class="python"><b>2</b></code> <span class="hl-text">статических метода
+            конвертации</span>, например, <span class="hl-text">перевода метров в указанную единицу</span> и <span
+            class="hl-text">перевода цельсия в указанную единицу</span>.
+        </p>
+
+        <p>Затем реализуйте следующее меню:
+        <div class="console">
+          <pre><code>1. Метры
+2. Цельсий</code></pre>
+        </div>
+        </p>
+
+        <p>При выборе <span class="hl-text">единицы измерения</span> программа должна <span class="hl-text">предлагать
+            меню по выбору конвертации</span>, а затем <span class="hl-text">запрашивать количество единиц</span> и
+          <span class="hl-text">выводить результат конвертации</span>.
+        </p>
       </div>
     </div>
   </div>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
