--- a/Урок 41-48. ООП/Python - PT47.html
+++ b/Урок 41-48. ООП/Python - PT47.html
@@ -1,10 +1,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Python - PT44</title>
+  <title>Python - PT47</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -171,40 +173,47 @@
     </div>
     <div class="right-block">
       <div class="right-rect">
-        <h2>Практическое Задание 44.1</h2>
-        <p>Создайте класс <span class="hl-text">"Транспорт"</span>. Этот класс должен <span class="hl-text">хранить поля для идентификатора</span> и <span class="hl-text">максимальной скорости</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса определите <span class="hl-text">метод движения</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает время в часах</span>, которое потратит транспорт с максимальной скоростью на преодоление указанного расстояния.
-          <br>Для класса определите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого ресурса</span>. В данном случае метод просто <span class="hl-text">возвращает</span> <code class="python"><b>0</b></code>.
-        </p>
-
-        <p>Создайте класс <span class="hl-text">"Автомобиль"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для топлива</span> и <span class="hl-text">расхода топлива на км</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого топлива</span>.
-        </p>
-        <p>Создайте класс <span class="hl-text">"Электромобиль"</span>. Этот класс должен <span class="hl-text">наследоваться от класса "Транспорт"</span> и <span class="hl-text">хранить поля для заряда</span> и <span class="hl-text">расхода заряда за час</span>.
-          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
-          <br>Для класса переопределите <span class="hl-text">метод определения требуемого количества ресурсов за прохождение расстояния</span>. Метод <span class="hl-text">принимает расстояние в км</span> и <span class="hl-text">возвращает количество требуемого заряда</span>.
+        <h2>Практическое Задание 47.1</h2>
+        <p>Создайте класс <span class="hl-text">"Книга"</span>. Этот класс должен <span class="hl-text">хранить поля для
+            названия</span>, <span class="hl-text">автора</span>, <span class="hl-text">даты выхода</span> (одна строка)
+          и <span class="hl-text">количества</span>.
+          <br>Для класса определите <span class="hl-text">строковое представление</span>, <span
+            class="hl-text">конструктор</span> и <span class="hl-text">свойства</span>.
+          <br>Для класса реализуйте <span class="hl-text">магические методы</span> <code
+            class="python"><b>__eq__()</b></code>, <code class="python"><b>__add__()</b></code> и <code
+            class="python"><b>__sub__()</b></code>. Книги <span class="hl-text">равны</span>, если у них совпадают <span
+            class="hl-text">название</span>, <span class="hl-text">автор</span> и <span class="hl-text">дата
+            выхода</span>. Складывание книг <span class="hl-text">увеличивает количество исходной книги</span>.
         </p>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 44.2</h2>
+        <h2>Практическое Задание 47.2</h2>
         <p>Реализуйте следующее меню:
         <div class="console">
-          <pre><code>1. Показать все автомобили из списка
-2. Добавить автомобиль в список
-3. Удалить автомобиль в список
-4. Определить количество ресурса за прохождение расстояния
-5. Завершить программу</code></pre>
+          <pre><code>1. Показать книги первой библиотеки
+2. Показать книги второй библиотеки
+3. Добавить книгу в первую библиотеку
+4. Передать книгу во вторую библиотеку</code></pre>
         </div>
+        </p>
+
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает название</span>,
+          <span class="hl-text">автора</span>, <span class="hl-text">дату выхода</span> и <span
+            class="hl-text">количество</span>, затем <span class="hl-text">добавляет в список</span>. Одинаковых книг в
+          списке <span class="hl-text">быть не должно</span>.
+        </p>
+        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает название</span>,
+          <span class="hl-text">автора</span>, <span class="hl-text">дату выхода</span> и <span
+            class="hl-text">количество</span>, затем <span class="hl-text">добавляет во второй список, но отнимает из
+            первого</span>.
         </p>
       </div>
     </div>
   </div>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
